2010-08-24  Kevin Ryde  <user42@zip.com.au>

	* progmodes/ruby-mode.el (ruby): Add defgroup.

2010-08-24  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/python.el: Add Ipython support (Bug#5390).
	(python-shell-prompt-alist)
	(python-shell-continuation-prompt-alist): New options.
	(python--set-prompt-regexp): New function.
	(inferior-python-mode, run-python, python-shell): Require
	ansi-color.  Use python--set-prompt-regexp to set the comint
	prompt based on the Python interpreter.
	(python--prompt-regexp): New var.
	(python-check-comint-prompt)
	(python-comint-output-filter-function): Use it.
	(run-python): Use a pipe (Bug#5694).

2010-08-24  Fabian Ezequiel Gallina  <galli.87@gmail.com>  (tiny change)

	* progmodes/python.el (python-send-region): Send a different
	Python command if Ipython is in use.
	(python-check-version): Use a Python command to find the version.

2010-08-24  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-yank-primary): Avoid setting primary when
	deactivating the mark (Bug#6872).

2010-08-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el: Accept UNIX domain sockets as bus address.
	(top): Don't initialize `dbus-registered-objects-table' anymore,
	this is done in dbusbind,c.
	(dbus-check-event): Adapt test for bus.
	(dbus-return-values-table, dbus-unregister-service)
	(dbus-event-bus-name, dbus-introspect, dbus-register-property):
	Adapt doc string.

2010-08-23  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-use-virtual-buffers): Fix typo in docstring.

2010-08-22  Juri Linkov  <juri@jurta.org>

	* simple.el (read-extended-command): New function with the logic
	for `completing-read' moved to Elisp from `execute-extended-command'.
	Use `function-called-at-point' in `minibuffer-default-add-function'
	to get a command name for M-n (bug#5364, bug#5214).

2010-08-22  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line-1): Issue warning for ignored arguments
	--unibyte, etc (Bug#6886).
